--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -103,8 +103,8 @@ nav ul li {
 }
 
 .hero img {
-  height: 27.5rem;
-  width: 27.5rem;
+  height: 17.5rem;
+  width: 17.5rem;
   margin-top: 20px;
   margin-left: 50px;
   border-radius: 50%;
@@ -113,7 +113,7 @@ nav ul li {
 }
 
 .bio {
-  width: 25rem;
+  width: 55rem;
   padding: 0.625rem;
   margin-left: 193px;
   border-radius: 6px;
@@ -491,13 +491,14 @@ footer {
     height: 6.5rem;
     width: 5rem;
     margin-left: 8px;
+    display: none;
   }
 
   .bio {
     width: 18.3rem;
   }
   .animate__shakeX{
-    margin-left: 74px ;
+    margin-left: 4px ;
   }
   .animate__pulse {
     margin-left: -82px;
